<resources>
    <string name="app_name">My Cars</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Página Principal</string>
    <string name="menu_favorities">Favoritos</string>
    <string name="exit">Sair</string>
    <string name="model_vehicle">Modelo:</string>
    <string name="year_vehicle">Ano:</string>
    <string name="price_vehicle">Valor:</string>
    <string name="button_save">Salvar</string>
    <string name="login">Entrar</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="text_register">Não tem uma conta? Cadastre-se</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="title_register">Cadastre-se</string>
    <string name="name">Nome</string>
    <string name="register">Cadastrar</string>
    <string name="complete_data">Preencha os campos</string>
    <string name="send_email">Enviar email</string>
    <string name="complete_data_2">para alterar a senha</string>
    <string name="back_to_login">VOLTAR</string>
</resources>