<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".view.NewCarsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/text_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_vehicle"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_model" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_vehicle"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_year"
            app:layout_constraintStart_toStartOf="@+id/edit_year" />

        <EditText
            android:id="@+id/edit_year"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/edit_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_model" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_vehicle"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_price"
            app:layout_constraintStart_toEndOf="@+id/edit_price"
            app:layout_constraintStart_toStartOf="@id/edit_price" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/text_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_year"
            app:layout_constraintTop_toTopOf="@+id/edit_year" />

        <ImageView
            android:id="@+id/image_view_picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_price" />

        <ImageButton
            android:id="@+id/image_upload_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#00018786"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_picture"
            app:layout_constraintEnd_toEndOf="@+id/image_view_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_view_picture"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_picture" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>